--- a/web/FB messenger(firebase)/index.html
+++ b/web/FB messenger(firebase)/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Page Title</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
         <script src="https://code.jquery.com/jquery-3.1.1.js">
         </script>
